// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Utils/CopyToClipboardBtn Copy 1`] = `
<button
  className="sc-eJwWfJ hgcDqj"
  onClick={[Function]}
  onKeyDown={[Function]}
  onMouseLeave={[Function]}
  type="button"
>
  <span
    aria-describedby={null}
    className="sc-iqseJM drawdo"
    color="icon"
    onBlur={[Function]}
    onFocus={[Function]}
    onMouseLeave={[Function]}
    onMouseOver={[Function]}
    onTouchEnd={[Function]}
    onTouchStart={[Function]}
    title="Copy to clipboard"
  >
    <svg
      height="16"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <g
        fill="none"
        fillRule="evenodd"
      >
        <path
          d="M0 0H16V16H0z"
        />
        <path
          className="icon-color"
          d="M10 10h3V3H8v1c1.105 0 2 .895 2 2v4zM6 4V3c0-1.105.895-2 2-2h5c1.105 0 2 .895 2 2v7c0 1.105-.895 2-2 2h-3v1c0 1.105-.895 2-2 2H3c-1.105 0-2-.895-2-2V6c0-1.105.895-2 2-2h3zM3 6v7h5V6H3z"
          fillRule="nonzero"
        />
      </g>
    </svg>
  </span>
</button>
`;

exports[`Storyshots Utils/CopyToClipboardBtn Copy With Different Logo 1`] = `
<button
  className="sc-eJwWfJ hgcDqj"
  onClick={[Function]}
  onKeyDown={[Function]}
  onMouseLeave={[Function]}
  type="button"
>
  <span
    aria-describedby={null}
    className="sc-iqseJM drawdo"
    color="icon"
    onBlur={[Function]}
    onFocus={[Function]}
    onMouseLeave={[Function]}
    onMouseOver={[Function]}
    onTouchEnd={[Function]}
    onTouchStart={[Function]}
    title="Copy to clipboard"
  >
    <svg
      height="16"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <g
        fill="none"
        fillRule="evenodd"
      >
        <path
          d="M0 0H16V16H0z"
        />
        <path
          className="icon-color"
          d="M5.988 7.77c.008.07.011.141.011.214 0 .078-.004.154-.013.23l4.962 3.094c.302-.185.658-.292 1.038-.292 1.097 0 1.988.89 1.988 1.987 0 1.098-.89 1.987-1.988 1.987-1.098 0-1.988-.889-1.988-1.987 0-.092.007-.183.019-.272L5.092 9.66c-.314.205-.69.324-1.092.324-1.104 0-2-.896-2-2s.896-2 2-2c.408 0 .788.122 1.105.333l4.897-3.065c-.01-.083-.016-.167-.016-.252 0-1.105.896-2 2-2s2 .895 2 2c0 1.104-.896 2-2 2-.395 0-.763-.115-1.074-.313L5.988 7.77z"
        />
      </g>
    </svg>
  </span>
</button>
`;
